clusters/home/portainer/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: portainer-external
  namespace: home
subsets:
  - addresses:
      - ip: 192.168.1.50
    ports:
      - port: 9000
