clusters/home/portainer/external-service.yaml
apiVersion: traefik.io/v1alpha1
kind: Service
metadata:
  name: portainer-external
  namespace: home
spec:
  loadBalancer:
    servers:
      - url: "http://192.168.1.50:9000" # portainer location
    serversTransport: portainer-transport
